--- a/src/virus/view/newCascadeStyleSheet.css
+++ b/src/virus/view/newCascadeStyleSheet.css
@@ -23,7 +23,7 @@
 }
 
 .hVoxActivo2{
-    -fx-border-color:green; 
+    -fx-border-color:#00de0f; 
     -fx-border-width: 1; 
     -fx-border-style: solid;
     -fx-border-radius: 5px;
