--- a/src/virus/view/newCascadeStyleSheet.css
+++ b/src/virus/view/newCascadeStyleSheet.css
@@ -23,10 +23,10 @@
 }
 
 .hVoxActivo2{
-    -fx-border-color:#00de0f; 
+    -fx-border-color:#6684ff; 
     -fx-border-width: 1; 
     -fx-border-style: solid;
-    -fx-border-radius: 5px;
+    -fx-border-radius: 8px;
 }
 
 .hVoxActivo:hover{
