--- a/src/virus/view/VistaCargando.fxml
+++ b/src/virus/view/VistaCargando.fxml
@@ -7,13 +7,12 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 
-
-<AnchorPane xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="virus.controller.VistaCargandoController">
+<AnchorPane id="cargando" stylesheets="@newCascadeStyleSheet.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="virus.controller.VistaCargandoController">
    <children>
-      <ImageView fx:id="omg11" fitHeight="200.0" fitWidth="300.0" pickOnBounds="true" preserveRatio="true" />
-      <VBox alignment="CENTER" layoutX="25.0" layoutY="40.0" prefHeight="122.0" prefWidth="249.0" style="-fx-background-color: #04245c;">
+      <ImageView fx:id="omg11" fitHeight="200.0" fitWidth="316.0" layoutX="-16.0" pickOnBounds="true" preserveRatio="true" />
+      <VBox alignment="CENTER" layoutX="26.0" layoutY="39.0" prefHeight="122.0" prefWidth="249.0" style="-fx-background-color: #gray;">
          <children>
-            <Label fx:id="lblCorreos" styleClass="lbl1" stylesheets="@newCascadeStyleSheet.css" text="Enviando Correos">
+            <Label fx:id="lblCorreos" styleClass="lbl1" stylesheets="@newCascadeStyleSheet.css" text="Esperando Jugadores">
                <VBox.margin>
                   <Insets bottom="20.0" />
                </VBox.margin>
