--- a/src/virus/view/newCascadeStyleSheet.css
+++ b/src/virus/view/newCascadeStyleSheet.css
@@ -77,6 +77,11 @@
     -fx-background-size: 100% 100%; 
     -fx-background-image: url("../resources/fondoJuego1.jpg");
 }
+#cargando{
+    -fx-background-size: 100% 100%; 
+    -fx-background-image: url("../resources/carga2.jpg");
+}
+
 .lbl:hover{
     -fx-font-family: "Decker";
     -fx-font-size : 27pt;
