--- a/src/virus/view/VistaCargando.fxml
+++ b/src/virus/view/VistaCargando.fxml
@@ -10,7 +10,7 @@
 <AnchorPane id="cargando" stylesheets="@newCascadeStyleSheet.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="virus.controller.VistaCargandoController">
    <children>
       <ImageView fx:id="omg11" fitHeight="200.0" fitWidth="316.0" layoutX="-16.0" pickOnBounds="true" preserveRatio="true" />
-      <VBox alignment="CENTER" layoutX="26.0" layoutY="39.0" prefHeight="122.0" prefWidth="249.0" style="-fx-background-color: #gray;">
+      <VBox alignment="CENTER" layoutX="26.0" layoutY="39.0" prefHeight="122.0" prefWidth="249.0">
          <children>
             <Label fx:id="lblCorreos" styleClass="lbl1" stylesheets="@newCascadeStyleSheet.css" text="Esperando Jugadores">
                <VBox.margin>
